fixed overflow bugs

--- a/app/assets/stylesheets/dropdown-menu.css
+++ b/app/assets/stylesheets/dropdown-menu.css
@@ -132,7 +132,7 @@ a {
 }
 #year-input {
   margin-bottom: 5px;
-  width: 100%;
+  width: auto;
   margin-left: 5%
 }
 
